backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      dnsPolicy: ClusterFirst
      containers:
      - name: backend
        # image: thivyasree/finance-tracker-repository:finance-tracker-backend_v1.0.0
        image: us-west1-docker.pkg.dev/finance-tracker-427512/backend-repo/finance-tracker-backend:v1.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
  - port: 8080
    targetPort: 8080
