ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
spec:
  ingressClassName: nginx
  rules:
  - host: finance-tracker.com
    http:
      paths:
      - path: /auth/google/callback
        pathType: Prefix
        backend:
          service:
            name: backend 
            port:
              number: 8080

      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 8080

      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 3000
